# asciidump

./: .gitignore  .pre-commit-config.yaml  .stylelintignore  .stylelintrc.json  dev_cli.py  make_style.py  pyproject.toml
sass/: reset.scss  style.scss
src/asciidump/: __init__.py
src/asciidump/templates/: index.html
tests/: test_cli.py  test_structs.py
tests/files/artdir/: python.txt
